--- a/jwt/auth-server/src/main/resources/application.properties
+++ b/jwt/auth-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql:///oauth2?useUnicode=true&characterEncoding=UTF-8&serverTimeZone=Asia/Shanghai
-spring.datasource.password=123
+spring.datasource.url=jdbc:mysql://159.75.112.179:3306/oauth2?useUnicode=true&characterEncoding=UTF-8&serverTimeZone=Asia/Shanghai
+spring.datasource.password=196980
 spring.datasource.username=root
 
 spring.main.allow-bean-definition-overriding=true
